--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.3",
     "nuxt": "3.0.0-rc.4"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.6.5",
+    "@heroicons/vue": "^1.0.6",
+    "@nuxtjs/i18n": "^7.2.2"
   }
 }
